<resources>
    <string name="error_msg">Wystąpił błąd! Spróbuj ponownie.</string>
    <string name="connection_problem">Brak dostępu do internetu.</string>

    <!--main_menu-->
    <string name="log_in">Zaloguj się</string>
    <string name="log_out">Wyloguj się</string>

    <!--news list-->
    <string name="addition_date">Data dodania:&#160;</string>
    <string name="latest_news">Aktualności:</string>
    <string name="support_this_action">Wspomóż tę akcję</string>
    <string name="newest_comments">Najnowsze komentarze:</string>

    <!--tabs-->
    <string name="navigation_tab_news">NEWSY</string>
    <string name="navigation_tab_gallery">GALERIA</string>
    <string name="navigation_tab_schedule">GRAFIK</string>
    <string name="navigation_tab_account">KONTO</string>

    <!--errors-->
    <string name="financial_info_load_error">Wystąpił błąd podczas pobierania danych finansowych z serwera.</string>
    <string name="connection_error">Brak połączenia. Przeciągnij by odświeżyć.</string>
    <string name="connection_error_on_refresh">Nie udało się odświeżyć. Spróbuj ponownie.</string>
    <string name="default_error">Wystąpił błąd. Spróbuj ponownie</string>
    <string name="error_not_found">ERROR 404 NOT FOUND</string>
    <string name="error_unauthorized">ERROR 401 UNAUTHORIZED</string>
    <string name="error_forbidden">ERROR 403 FORBIDDEN</string>
    <string name="error_response">Brak połączenia. Spróbuj ponownie.</string>

    <!--login-->
    <string name="username_hint">Login</string>
    <string name="password_hint">Hasło</string>
    <string name="button_login_msg">Zaloguj się</string>
    <string name="button_bypass_login">Wejdź jako Gość</string>
    <string name="auth_username_error">Niepoprawny login</string>
    <string name="auth_empty_error">Puste pole</string>
    <string name="auth_password_error">Niepoprawne hasło</string>
    <string name="auth_forbidden">Dostęp zabroniony.</string>
    <string name="auth_error_response">Błąd odpowiedzi z serwera.</string>
    <string name="auth_error_validation">Niepoprawnie wprowadzono login lub hasło</string>

    <string name="help_msg">CHCĘ POMÓC TOZ!</string>
    <!--snackbar-->
    <string name="calendar_info_saved_data">Termin został pomyślnie zapisany.</string>
    <string name="navigation_tab_calendar">KALENADARZ</string>

    <!--dialogs calendar-->
    <string name="calendar_info_save_dialog">Czy na pewno chcesz się zapisać na ten termin?</string>
    <string name="calendar_save_dialog_cancel_button">ANULUJ</string>
    <string name="calendar_save_dialog_save_button">ZAPISZ</string>
    <string name="calendar_delete_dialog_delete_button">USUŃ</string>
    <string name="calendar_delete_dialog_cancel_button">POWRÓT</string>
    <string name="calendar_info_dialog_cancel_button">POWRÓT</string>
    <string name="user_calendar_button_name">JA</string>
    <string name="reservation_done">Termin został pomyślnie zapisany</string>
    <string name="reservation_removed">Termin został pomyślnie usunięty</string>
    <string name="afternoon">popołudnie</string>
    <string name="morning">rano</string>

    <!--pet galerry details-->
    <string name="pet_detail_name">Imię</string>
    <string name="pet_detail_type">Typ</string>
    <string name="pet_detail_sex">Płeć</string>
    <string name="pet_detail_date_add">Data dodania</string>
    <string name="pet_detail_action_bar_title">Galeria</string>
    <string name="pet_detail_button">Pomóż temu zwierzakowi</string>
    <string name="pet_type_dog">Pies</string>
    <string name="pet_type_cat">Kot</string>
    <string name="no_images">Brak zdjęć</string>
    <string name="comments">Komentarze:</string>
    <string name="add_comment">Dodaj komentarz</string>
    <string name="add">DODAJ</string>
    <string name="edit">EDYTUJ</string>
    <string name="edit_comment">Edytuj komentarz</string>

    <!--form for volunteer-->
    <string name="title_activity_volunteer_form">Formularz zgłoszeniowy</string>
    <string name="action_settings">Settings</string>
    <string name="form_user_name">Imię</string>
    <string name="form_user_surname">Nazwisko</string>
    <string name="form_user_phone_number">Numer Telefonu</string>
    <string name="form_user_email">Email</string>
    <string name="form_I_want_be_volunteer">Chcę zostać wolonatariuszem.</string>
    <string name="form_I_want_be_volunteer_home">Chcę zostać domem tymczasowym.</string>
    <string name="form_cancel_button">Anuluj</string>
    <string name="form_send_button">Wyślij</string>
    <string name="form_button_reporting_to_volunteer">Zgłoszenie na wolonatariusza</string>
    <string name="form_error_empty_field">Pole wymagane</string>
    <string name="form_error_incorrect_data">Niepoprawne dane</string>
    <string name="form_error_conflict">Twoje zgłoszenie jest rozpatrywane</string>
    <string name="form_success_massage">Zgłoszenie zostało wysłane</string>

    <!--account-->
    <string name="title_activity_change_password">Zmiana hasła</string>
    <string name="change_password">Zmień hasło</string>
    <string name="old_password_hint">Stare hasło</string>
    <string name="new_password_hint">Nowe hasło</string>
    <string name="repeat_new_password_hint">Powtórz nowe hasło</string>
    <string name="confirm_change_password">ok</string>
    <string name="cancel_change_password">powrót</string>
    <string name="empty_field_error">Pole wymagane</string>
    <string name="different_new_passwords_error">Wprowadzone hasła są różne</string>
    <string name="wrong_password_error">Niepoprawne hasło</string>
    <string name="too_long_password_error">Hasło powinno zawierać max 35 znaków</string>
    <string name="successful_password_change">Hasło zostało zmienione pomyślnie.</string>

    <!--financial-->
    <string name="name_button_back_financial">Wesprzyj TOZ finansowo</string>
    <string name="title_support_for">Tytuł przelewu: Pomoc dla</string>

    <!--add pet-->
    <string name="add_pet_title">Dodaj zwierzę</string>
    <string name="name">Imię</string>
    <string name="address">Adres</string>
    <string name="choose_type">Wybierz typ</string>
    <string name="choose_gender">Wybierz płeć</string>
    <string name="description">Opis</string>
    <string name="type">Typ</string>
    <string name="gender">Płeć</string>
    <string name="save">Zapisz</string>
    <string name="add_success_message">Zwierzę zostało dodane</string>
    <string name="add_image">Dodaj zdjęcie</string>
    <string name="remove_image">Usuń zdj.</string>

    <!--password reset-->
    <string name="forgot_password">RESETUJ HASŁO</string>
    <string name="reset_password_message">W celu zresetowania hasła podaj swój login (adres e-mail):</string>
    <string name="cancel">Anuluj</string>
    <string name="reset_password">Resetuj hasło</string>
    <string name="on_reset_success">Wiadomość email została wysłana</string>

    <!--kind of help-->
    <string name="charity_payment">Wesprzyj TOZ finansowo</string>
    <string name="volunteer">Zostań wolontariuszem TOZ</string>
    <string name="pet_sex_male">Samiec</string>
    <string name="pet_sex_female">Samica</string>
    <string name="dog_type">Pies</string>
    <string name="cat_type">Kot</string>
    <string name="dog_tag">DOG</string>
    <string name="male_tag">MALE</string>

</resources>
