<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.intive.toz.form.FormActivity"
    tools:showIn="@layout/activity_form">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/user_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/form_user_name"
                    android:inputType="text"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="25sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/surname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/form_user_surname"
                    android:inputType="text"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="25sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/form_user_phone_number"
                    android:inputType="phone"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="25sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/form_user_email"
                    android:inputType="textEmailAddress"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="25sp" />
            </android.support.design.widget.TextInputLayout>


            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radioVolunteer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:checked="true"
                    android:text="@string/form_I_want_be_volunteer" />

                <RadioButton
                    android:id="@+id/radioHomeVolunteer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/form_I_want_be_volunteer_home" />
            </RadioGroup>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_data"
            android:gravity="end"
            android:padding="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/form_cancel_button" />

            <Button
                android:id="@+id/send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/form_send_button" />
        </LinearLayout>
    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>
