<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_login_horizontal_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/reset_password_message"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/big_text"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_username_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username_hint"
                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/button_ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/button_orange"
                android:shadowRadius="@android:integer/config_longAnimTime"
                android:text="@string/reset_password"
                android:textAllCaps="false"
                android:textColor="@color/whiteText" />

            <Button
                android:id="@+id/button_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/button_orange"
                android:shadowRadius="@android:integer/config_longAnimTime"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/whiteText" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/windowBackground"
            android:visibility="gone">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

        </FrameLayout>

    </FrameLayout>

</ScrollView>