<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <GridView
                android:id="@+id/images_grid_view"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:gravity="center"
                android:numColumns="5"
                android:stretchMode="columnWidth" />

            <RelativeLayout
                android:id="@+id/add_images"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:background="@color/colorAccent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_add_a_photo_white_48dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/icon"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/add_image"
                    android:textColor="@color/whiteText" />
            </RelativeLayout>

        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/name_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/name_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:maxLength="35" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <fr.ganfra.materialspinner.MaterialSpinner
                    android:id="@+id/type_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    app:ms_arrowColor="@android:color/tab_indicator_text"
                    app:ms_baseColor="@android:color/tab_indicator_text"
                    app:ms_hint="@string/type" />

                <fr.ganfra.materialspinner.MaterialSpinner
                    android:id="@+id/gender_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    app:ms_arrowColor="@android:color/tab_indicator_text"
                    app:ms_baseColor="@android:color/tab_indicator_text"
                    app:ms_hint="@string/gender" />

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/address_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/address_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:maxLength="35" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/description_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                app:counterEnabled="true"
                app:counterMaxLength="1200">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/description_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    android:maxLength="1200" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>