<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context="com.intive.toz.login.LoginActivity">

    <ProgressBar
        android:id="@+id/progress_bar_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layout_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/activity_login_horizontal_margin"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_username_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                app:errorEnabled="true"
                app:hintTextAppearance="@style/TextAppearance.TextInputLayout.Color">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username_hint"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:hintTextAppearance="@style/TextAppearance.TextInputLayout.Color"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:hint="@string/password_hint"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_orange"
                android:shadowRadius="@android:integer/config_longAnimTime"
                android:text="@string/button_login_msg"
                android:textAllCaps="false"
                android:textColor="@color/whiteText" />

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:gravity="center"
                android:text="@string/forgot_password"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>